# hcs-logger

./: .gitlab-ci.yml  CMakeLists.txt  Changes.md  Doxyfile  LICENSE.txt  README.md  conanfile.txt  sonar-project.properties
include/headcode/logger/: event.hpp  formatter.hpp  level.hpp  logger.hpp  logger_core.hpp  sink.hpp  sink_factory.hpp  version.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  event.cpp  formatter.cpp  level.cpp  logger.cpp  sink.cpp  sink_factory.cpp
src/lib/formatter/: color_dark_background_formatter.cpp  simple_formatter.cpp  standard_formatter.cpp
src/lib/sink/: console_sink.cpp  console_sink.hpp  file_sink.cpp  file_sink.hpp  mutex_sink.hpp  null_sink.cpp  null_sink.hpp  syslog_sink.cpp  syslog_sink.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  test_benchmark.cpp  test_normal_flow.cpp
test/integration/: CMakeLists.txt
test/integration/console/: CMakeLists.txt  test.cpp
test/integration/file_logging/: CMakeLists.txt  test.cpp
test/integration/hello_world_debug/: CMakeLists.txt  test.cpp
test/integration/hello_world_warning/: CMakeLists.txt  test.cpp
test/shared/: ipsum_lorem.hpp
test/unit/: CMakeLists.txt  test_event.cpp  test_formatter.cpp  test_level.cpp  test_logger.cpp  test_sink.cpp  test_threading.cpp  test_version.cpp
tools/: CMakeLists.txt
tools/conan/: CMakeLists.txt  conanfile.py
tools/docker/: CMakeLists.txt  Dockerfile.build.debian-buster  Dockerfile.build.fedora32  Dockerfile.build.ubuntu-focal  README.md  create-containers.sh
