# ------------------------------------------------------------
# This file is the main CMakeLists of logger of headcode.space
#
# The 'LICENSE.txt' file in the project root holds the software license.
# Copyright (C) 2021 headcode.space e.U.
# Oliver Maurhart <info@headcode.space>, https://www.headcode.space
# ------------------------------------------------------------

add_subdirectory(console)
add_subdirectory(file_logging)
add_subdirectory(hello_world_debug)
add_subdirectory(hello_world_warning)
